varnish-macros/snapshots/shared1_task@docs.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
<!--

   !!!!!!  WARNING: DO NOT EDIT THIS FILE!

   This file was generated from the Varnish VMOD source code.
   It will be automatically updated on each build.

-->
# Varnish Module (VMOD) `task`

```vcl
// Place import statement at the top of your VCL file
// This loads vmod from a standard location
import task;

// Or load vmod from a specific file
import task from "path/to/libtask.so";
```

### Function `VOID per_vcl_val()`

### Function `VOID per_vcl_opt([INT op])`

### Function `VOID per_tsk_val()`

### Function `VOID per_tsk_opt([INT op])`

### Object `PerVcl`

```vcl
// Create a new instance of the object in your VCL init function
sub vcl_init {
    new new = PerVcl.new();
}
```

#### Method `VOID both()`

#### Method `VOID both_pos(INT val)`

#### Method `VOID both_opt([INT opt])`
