varnish-macros/snapshots/shared3_tuple@json.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
VMOD_JSON_SPEC
[
  [
    "$VMOD",
    "1.0",
    "tuple",
    "Vmod_vmod_tuple_Func",
    "a40747d863f47d9ecc1b4211f0359f8bb26e005aac1d11dd25d5e88a59efd99e",
    "Varnish (version) (hash)",
    "0",
    "0"
  ],
  [
    "$CPROTO",
    "
typedef VCL_STRING td_vmod_tuple_ref_to_slice_lifetime(
    VRT_CTX,
    struct vmod_priv *
);

struct Vmod_vmod_tuple_Func {
  td_vmod_tuple_ref_to_slice_lifetime *f_ref_to_slice_lifetime;
};

static struct Vmod_vmod_tuple_Func Vmod_vmod_tuple_Func;"
  ],
  [
    "$FUNC",
    "ref_to_slice_lifetime",
    [
      [
        "STRING"
      ],
      "Vmod_vmod_tuple_Func.f_ref_to_slice_lifetime",
      "",
      [
        "PRIV_TASK",
        "tsk_vals"
      ]
    ]
  ]
]

