varnish-macros/snapshots/vcl_returns_vcl_returns@docs.snap
---
source: varnish-macros/src/tests.rs
---
<!--

   !!!!!!  WARNING: DO NOT EDIT THIS FILE!

   This file was generated from the Varnish VMOD source code.
   It will be automatically updated on each build.

-->
# Varnish Module (VMOD) `vcl_returns`

```vcl
// Place import statement at the top of your VCL file
// This loads vmod from a standard location
import vcl_returns;

// Or load vmod from a specific file
import vcl_returns from "path/to/libvcl_returns.so";
```

### Function `ACL val_acl()`

### Function `ACL res_acl()`

### Function `BACKEND val_backend()`

### Function `BACKEND res_backend()`

### Function `BLOB val_blob()`

### Function `BLOB res_blob()`

### Function `BODY val_body()`

### Function `BODY res_body()`

### Function `BOOL val_bool()`

### Function `BOOL res_bool()`

### Function `BYTES val_bytes()`

### Function `BYTES res_bytes()`

### Function `DURATION val_duration()`

### Function `DURATION res_duration()`

### Function `ENUM val_enum()`

### Function `ENUM res_enum()`

### Function `HEADER val_header()`

### Function `HEADER res_header()`

### Function `HTTP val_http()`

### Function `HTTP res_http()`

### Function `INSTANCE val_instance()`

### Function `INT val_int()`

### Function `INT res_int()`

### Function `IP val_ip()`

### Function `IP res_ip()`

### Function `PROBE val_probe()`

### Function `PROBE res_probe()`

### Function `REAL val_real()`

### Function `REAL res_real()`

### Function `REGEX val_regex()`

### Function `REGEX res_regex()`

### Function `STEVEDORE val_stevedore()`

### Function `STEVEDORE res_stevedore()`

### Function `STRANDS val_strands()`

### Function `STRANDS res_strands()`

### Function `STRING val_string()`

### Function `STRING res_string()`

### Function `SUB val_sub()`

### Function `SUB res_sub()`

### Function `TIME val_time()`

### Function `TIME res_time()`

### Function `VCL val_vcl()`

### Function `VCL res_vcl()`
